successfully runClient
Currently working:
- Dragon Taming n' Riding
- Team Feature
- Inventory Interaction

Not working:
- Some Texture (Original MineTeam)
- Tag-based ingredients for taming in Config (may not be fixed)